repaired some cases

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,62 +578,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'input_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#y = df_train[\"Transported\"]\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#x = input_data\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m train_data\u001b[39m=\u001b[39m(input_data, df_train[\u001b[39m\"\u001b[39m\u001b[39mTransported\u001b[39m\u001b[39m\"\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'input_data' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#y = df_train[\"Transported\"]\n",
-    "#x = input_data\n",
-    "train_data=(input_data, df_train[\"Transported\"])"
+    "# preparing data for the net\n",
+    "\n",
+    "y = df_train[\"Transported\"]\n",
+    "x = input_data\n",
+    "train_data = [(x[i, :], y[i]) for i in range(np.shape(x)[1])]\n",
+    "# dunno how will loaded data look like. Insert mean in place of NaN etc TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(network , train_data, test_data, test=False, iter_num=10): # przerowbic na funkcje (TODO), dane w postacie np.array jak narazie jak skończysz to powiedz to przerowbimy na torch.tensor\n",
+    "def test_if_ok(predictions, true_data):\n",
+    "        correct = 0\n",
+    "        for p, t in predictions, true_data:\n",
+    "                if p == t: correct += 1\n",
+    "        return correct\n",
+    "\n",
+    "def train(network, train_data, test_data, test = False, iter_num = 10): # przerowbic na funkcje (TODO), dane w postacie np.array jak narazie jak skończysz to powiedz to przerowbimy na torch.tensor\n",
+    "        \n",
     "        # defining our model\n",
     "\n",
-    "        input_dim = ?\n",
-    "        output_dim = 1 # \"yes\" or \"no\"\n",
-    "        model = Network(input_dim, output_dim)\n",
+    "        input_dim = np.shape(train_data)[1]     # number of variables\n",
+    "        output_dim = 1                          # \"yes\" or \"no\"\n",
+    "        model = network(input_dim, 100, 80, 100, output_dim)\n",
     "\n",
-    "        # configurating the net\n",
+    "        # configuring the net\n",
     "\n",
-    "        criterion = torch.nn.NLLLoss() # loss function (negative log-likelihood?) #cross entropy loss (?) (TODO)\n",
-    "        learning_rate = 3e-4 # initial lr, internet says best for Adam\n",
-    "        optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate) # probably those adaptive gradients or something\n",
-    "        # scheduler = ... I'll omit this line, because lr schedulers are important with SGD, and not so much with Adam\n",
+    "        criterion = torch.nn.BCELoss()          # binary cross entropy loss function\n",
+    "        learning_rate = 3e-4                    # initial lr, internet says best for Adam\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate)\n",
     "\n",
     "        # learning loop\n",
     "\n",
-    "\n",
-    "        loss_list = []\n",
-    "        iter_num = 100\n",
-    "        for iter in range(iter_num):\n",
-    "                print(f'epoch nr {iter}')\n",
-    "                for x, y in train_data: #poprawić\n",
-    "                        optimizer.zero_grad()                    # clear gradient of loss function\n",
-    "                        results = model(x)  # calculate predictions\n",
-    "                        loss = criterion(results, y)  # calculate loss\n",
-    "                        loss_list.append(loss.detach().numpy())\n",
-    "                        loss.backward()                          # calculate gradient\n",
-    "                        optimizer.step()                         # update parameters\n",
+    "        correct_list = []\n",
+    "   \n",
+    "        epoch_num = 100\n",
+    "        for epoch in range(epoch_num):\n",
+    "                print(f'epoch nr {epoch}')\n",
+    "                for x, y in train_data:\n",
+    "                        optimizer.zero_grad()           # clear gradient of loss function\n",
+    "                        results = model(x)              # calculate predictions\n",
+    "                        loss = criterion(results, y)    # calculate loss\n",
+    "                        loss.backward()                 # calculate gradient\n",
+    "                        optimizer.step()                # update parameters\n",
     "                        \n",
-    "                #if iter % 100:\n",
-    "                        #liczyć model na danych testowych i na podstawie tego zbierac loss z test data i plotowac, możesz zrobić na końcu\n",
+    "                if epoch % 5:\n",
+    "                        correct_list.append(test_if_ok(model(test_data[0]), test_data[1]))\n",
     "\n",
-    "        # plot loss function decay\n",
+    "        # plot loss function on test data\n",
+    "        if test == True:\n",
     "\n",
-    "        plt.plot(loss_list, range(iter_num), color = \"violet\")\n",
-    "        plt.yscale(\"log\")\n",
-    "        plt.ylabel(\"Mean squared error\")\n",
-    "        plt.xlabel(\"Iteration\")\n",
-    "        plt.title(\"Loss function's decay\")\n",
-    "        plt.show()\n",
+    "                wrong_list = [np.shape(test_data)[0] - c for c in correct_list]\n",
+    "\n",
+    "                names = []\n",
+    "                plt.plot(correct_list, range(epoch_num), color = \"green\")\n",
+    "                names.append(\"Correct guesses\")\n",
+    "                plt.plot(wrong_list, range(epoch_num), color = \"red\")\n",
+    "                names.append(\"Wrong guesses\")\n",
+    "                plt.yscale(\"log\")\n",
+    "                plt.ylabel(\"Number of guesses\")\n",
+    "                plt.xlabel(\"Epoch number\")\n",
+    "                plt.title(\"Accuracy of the net on test data\")\n",
+    "                plt.legend(names, bbox_to_anchor = [1, 1])\n",
+    "                plt.grid()\n",
+    "                plt.show()\n",
     "        \n",
+    "        # and finally\n",
+    "\n",
     "        return model"
    ]
   },
@@ -646,11 +677,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "1\n",
+      "6\n",
+      "2\n",
+      "7\n",
+      "3\n",
+      "8\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "train(Network, )"
+    "lst = []\n",
+    "for i in range(5):\n",
+    "    lst.append((i, i+5))\n",
+    "for x, y in lst:\n",
+    "    print(x)\n",
+    "    print(y)"
    ]
   }
  ],
