function fixing nan and  improved learning loop

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -594,12 +594,42 @@
     }
    ],
    "source": [
-    "# preparing data for the net\n",
+    "# PREPARE DATA FOR THE NET\n",
     "\n",
-    "y = df_train[\"Transported\"]\n",
-    "x = input_data\n",
-    "train_data = [(x[i, :], y[i]) for i in range(np.shape(x)[1])]\n",
-    "# dunno how will loaded data look like. Insert mean in place of NaN etc TODO"
+    "# for now I assume that \"x\" is np.array with variables as columns and observations as rows\n",
+    "# \"y\" is simply is boolean vector of length equal to number of rows of \"x\"\n",
+    "\n",
+    "def get_rid_of_nan(arr, take_mean = True):\n",
+    "\n",
+    "    if take_mean == True:    # we replace nan with variable mean\n",
+    "\n",
+    "        means = []\n",
+    "        arr_new = arr.copy()\n",
+    "        arr_new[arr_new == np.nan] = 0\n",
+    "        for i in range(np.shape(arr_new)[1]):\n",
+    "            means.append(np.mean(arr_new[:, i]))\n",
+    "        \n",
+    "        for col in range(np.shape(arr)[1]):\n",
+    "            arr[:, col][arr[:, col] == np.nan] == means(col)\n",
+    "\n",
+    "    else:   # we simply delete rows containing a nan\n",
+    "\n",
+    "        arr_new = np.zeros([1, np.shape(arr)[1]])   # initiate new array\n",
+    "        for r in range(np.shape(arr)[0]):\n",
+    "            if all(arr[r, :] != np.nan):\n",
+    "                np.vstack(arr_new, arr[r, :])\n",
+    "        np.delete(arr_new, obj = 0, axis = 0)       # delete first row of zeros\n",
+    "\n",
+    "    arr = arr_new\n",
+    "\n",
+    "# let's use our lovely function\n",
+    "\n",
+    "get_rid_of_nan(x)\n",
+    "get_rid_of_nan(y)\n",
+    "\n",
+    "# and we transform our data into vector of observation, when each observation consists out of input (\"x\") and output(\"y\")\n",
+    "\n",
+    "train_data = [(x[i, :], y[i]) for i in range(np.shape(x)[1])]"
    ]
   },
   {
@@ -614,7 +644,7 @@
     "                if p == t: correct += 1\n",
     "        return correct\n",
     "\n",
-    "def train(network, train_data, test_data, test = False, iter_num = 10): # przerowbic na funkcje (TODO), dane w postacie np.array jak narazie jak skończysz to powiedz to przerowbimy na torch.tensor\n",
+    "def train(network, train_data, test_data, test = False, iter_num = 10):\n",
     "        \n",
     "        # defining our model\n",
     "\n",
@@ -646,6 +676,7 @@
     "                        correct_list.append(test_if_ok(model(test_data[0]), test_data[1]))\n",
     "\n",
     "        # plot loss function on test data\n",
+    "        \n",
     "        if test == True:\n",
     "\n",
     "                wrong_list = [np.shape(test_data)[0] - c for c in correct_list]\n",
@@ -666,44 +697,6 @@
     "        # and finally\n",
     "\n",
     "        return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "5\n",
-      "1\n",
-      "6\n",
-      "2\n",
-      "7\n",
-      "3\n",
-      "8\n",
-      "4\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "lst = []\n",
-    "for i in range(5):\n",
-    "    lst.append((i, i+5))\n",
-    "for x, y in lst:\n",
-    "    print(x)\n",
-    "    print(y)"
    ]
   }
  ],
