--- a/main.ipynb
+++ b/main.ipynb
@@ -505,127 +505,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = pd.read_csv('train.csv')\n",
-    "df_xtest = pd.read_csv('test.csv')\n",
+    "df_test = pd.read_csv('test.csv')\n",
     "df_ytest = pd.read_csv('sample_submission.csv')\n",
+    "df_test['transported']=df_ytest.iloc[:,1].values\n",
     "\n",
-    "#convert true/false values to 1/0\n",
-    "df_train.iloc[:,13]=1*df_train.iloc[:,13]\n",
-    "df_train.iloc[:,2]=1*df_train.iloc[:,2]\n",
-    "df_train.iloc[:,6]=1*df_train.iloc[:,6]\n",
-    "df_xtest.iloc[:,2]=1*df_xtest.iloc[:,2]\n",
-    "df_xtest.iloc[:,6]=1*df_xtest.iloc[:,6]\n",
-    "df_ytest.iloc[:,1]=1*df_ytest.iloc[:,1]\n",
-    "\n",
-    "#normalize numeric values by their maximum value\n",
-    "for i in [5,7,8,9,10,11]:  \n",
-    "    df_xtest.iloc[:,i] = df_xtest.iloc[:,i]/max(df_train.iloc[:,i])\n",
-    "    df_train.iloc[:,i] = df_train.iloc[:,i]/max(df_train.iloc[:,i])\n",
-    "\n",
-    "\n",
-    "#Encoding data. I put into this function a list of categories we want to encode (e.g.planet names)\n",
-    "def encoding(sequences, categories):\n",
+    "def encoding_categories(sequences, categories):  #I put into this function a list of categories we want to encode\n",
     "  results = np.zeros((len(sequences), len(categories))) # Creates an all-zero matrix of shape (len(sequences), len(categories))\n",
     "  for i, sequence in enumerate(sequences): # Sets specific indices of results to 1\n",
     "    for j in range(len(categories)):\n",
-    "        if sequence==categories[j]:\n",
-    "            results[i,j]=1\n",
+    "      if sequence==categories[j]:\n",
+    "        results[i,j]=1\n",
     "  return np.array(results)\n",
-    "  #można zrobić opymalniej\n",
-    "  #można dać całe encodowanie do funkcji i wywołać ją na danych testowych i treningowych\n",
+    "  \n",
     "\n",
-    "home_planet_train=encoding(df_train.iloc[:,1],['Europa','Earth','Mars'])\n",
-    "home_planet_test=encoding(df_xtest.iloc[:,1],['Europa','Earth','Mars'])\n",
+    "def encoding(df):\n",
+    "  #convert true/false values to 1/0\n",
+    "  df.iloc[:,13]=1*df.iloc[:,13]\n",
+    "  df.iloc[:,2]=1*df.iloc[:,2]\n",
+    "  df.iloc[:,6]=1*df.iloc[:,6]\n",
+    "  \n",
+    "  #normalize numeric values by their maximum value\n",
+    "  for i in [5,7,8,9,10,11]:  \n",
+    "      df.iloc[:,i] = df.iloc[:,i]/max(df.iloc[:,i])\n",
     "\n",
-    "destination_train=encoding(df_train.iloc[:,4],['TRAPPIST-1e','PSO J318.5-22','55 Cancri e'])\n",
-    "destination_test=encoding(df_xtest.iloc[:,4],['TRAPPIST-1e','PSO J318.5-22','55 Cancri e'])"
+    "  home_planet=encoding_categories(df.iloc[:,1],['Europa','Earth','Mars'])\n",
+    "  destination=encoding_categories(df.iloc[:,4],['TRAPPIST-1e','PSO J318.5-22','55 Cancri e'])\n",
+    "\n",
+    "  #Passenger ID is divided into group number (describing the whole group) and group ID (passenger's number inside their group)\n",
+    "  group, group_id=[],[]\n",
+    "  for x in df.iloc[:,0].values:\n",
+    "    group.append(int(x.split('_')[0]))\n",
+    "    group_id.append(int(x.split('_')[1]))  \n",
+    "  group=np.array(group)\n",
+    "  group_id=np.array(group_id)\n",
+    "\n",
+    "  #Cabin number is divided into Deck/Number/Side, where Side can be either P for Port or S for Starboard. (explained in kaggle)\n",
+    "  deck, num, side =[],[],[]\n",
+    "  for x in df.iloc[:,3].values:\n",
+    "    if isinstance(x, float):\n",
+    "      deck.append(np.nan) #if there's a missing value, I assign nan to deck, num and side\n",
+    "      num.append(np.nan) \n",
+    "      side.append(np.nan)\n",
+    "    else:\n",
+    "      deck.append(x.split('/')[0])\n",
+    "      num.append(int(x.split('/')[1]))\n",
+    "      side.append(x.split('/')[2])\n",
+    "  num=np.array(num)\n",
+    "  deck=encoding_categories(deck,['A','B','C','D','E','F','G','T'])\n",
+    "  side=encoding_categories(side,['P','S'])\n",
+    "\n",
+    "  dict={ \"group\":group, \"group id\":group_id, \n",
+    "        \"Europa\":home_planet[:,0],\"Earth\":home_planet[:,1],\"Mars\":home_planet[:,2],\n",
+    "        \"cryo_sleep\":df.iloc[:,2].values,\n",
+    "        \"num\":num,\n",
+    "        \"A\":deck[:,0],\"B\":deck[:,1],\"C\":deck[:,2],\"D\":deck[:,3],\"E\":deck[:,4],\"F\":deck[:,5],\"G\":deck[:,6],\"T\":deck[:,7], #deck\n",
+    "        \"P\":side[:,0],\"S\":side[:,1], #side\n",
+    "        \"TRAPPIST-1e\":destination[:,0],\"PSO J318.5-22\":destination[:,1],\"55 Cancri e\":destination[:,2],\n",
+    "        \"age\":df.iloc[:,5].values,\n",
+    "        \"vip\":df.iloc[:,6].values,\n",
+    "        \"room service\":df.iloc[:,7].values,\n",
+    "        \"food\":df.iloc[:,8].values,\n",
+    "        \"shopping\":df.iloc[:,9].values,\n",
+    "        \"spa\":df.iloc[:,10].values,\n",
+    "        \"VRdeck\":df.iloc[:,11].values\n",
+    "  }\n",
+    "  return dict\n",
+    "\n",
+    "train_data=np.transpose(np.vstack(list(encoding(df_train).values())))\n",
+    "test_data=np.transpose(np.vstack(list(encoding(df_test).values())))\n",
+    "train_labels=df_train.iloc[:,13].values\n",
+    "test_labels=df_test.iloc[:,13].values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 1. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [1. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 1.]\n",
-      " [1. 0. 0.]\n",
-      " [0. 1. 0.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Passenger ID is divided into group number (describing the whole group) and group ID (passenger's number inside their group)\n",
-    "#According to kaggle, people in one group are often family members.\n",
-    "group_train=[]\n",
-    "group_id_train=[]\n",
-    "group_test=[]\n",
-    "group_id_test=[]\n",
-    "for x in df_train.iloc[:,0].values:\n",
-    "    group_train.append(int(x.split('_')[0]))\n",
-    "    group_id_train.append(int(x.split('_')[1]))\n",
-    "for x in df_xtest.iloc[:,0]:\n",
-    "    group_test.append(int(x.split('_')[0]))\n",
-    "    group_id_test.append(int(x.split('_')[1]))    \n",
-    "group_train=np.array(group_train)\n",
-    "group_id_train=np.array(group_id_train)\n",
-    "group_test=np.array(group_test)\n",
-    "group_id_test=np.array(group_id_test)\n",
-    "\n",
-    "\n",
-    "#Cabin number is divided into Deck/Number/Side, where Side can be either P for Port or S for Starboard. (explained in kaggle)\n",
-    "deck_train=[]\n",
-    "deck_test=[]\n",
-    "num_train=[]\n",
-    "num_test=[]\n",
-    "side_train=[]\n",
-    "side_test=[]\n",
-    "for x in df_train.iloc[:,3].values:\n",
-    "    if isinstance(x, float):\n",
-    "        deck_train.append(np.nan) #if there's a missing value, I assign nan to deck, num and side (do we want to delete these points later?)\n",
-    "        num_train.append(np.nan) \n",
-    "        side_train.append(np.nan)\n",
-    "    else:\n",
-    "        deck_train.append(x.split('/')[0])\n",
-    "        num_train.append(int(x.split('/')[1]))\n",
-    "        side_train.append(x.split('/')[2])\n",
-    "for x in df_xtest.iloc[:,3]:\n",
-    "    if isinstance(x, float):\n",
-    "        deck_train.append(np.nan) \n",
-    "        num_train.append(np.nan)\n",
-    "        side_train.append(np.nan)\n",
-    "    else:\n",
-    "        deck_test.append( x.split('/')[0])\n",
-    "        num_test.append(int(x.split('/')[1]))\n",
-    "        side_test.append( x.split('/')[2])\n",
-    "num_train=np.array(num_train)\n",
-    "num_test=np.array(num_test)\n",
-    "deck_train=encoding(deck_train,['A','B','C','D','E','F','G','T'])\n",
-    "deck_test=encoding(deck_test,['A','B','C','D','E','F','G','T'])\n",
-    "side_train=encoding(side_train,['P','S'])\n",
-    "side_test=encoding(side_test,['P','S'])\n",
-    "\n",
-    "\n",
-    "#I put all of data into an array of arrays \n",
-    "xtrain=np.array([group_train,group_id_train,home_planet_train,df_train.iloc[:,2].values,deck_train,num_train,side_train,destination_train,df_train.iloc[:,5].values,\n",
-    "        df_train.iloc[:,6].values,df_train.iloc[:,7].values,df_train.iloc[:,8].values,df_train.iloc[:,9].values,df_train.iloc[:,10].values,df_train.iloc[:,11].values ],dtype=object)\n",
-    "\n",
-    "print(home_planet_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov  4 2022, 13:42:51) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
