--- a/main.ipynb
+++ b/main.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -602,9 +602,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1, 1.0, 0.0, 0.0, 0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.4936708860759494, 0, 0.0, 0.0, 0.0, 0.0, 0.0), (0,)]\n"
+     ]
+    }
+   ],
    "source": [
     "df_train = pd.read_csv('train.csv')\n",
     "df_test = pd.read_csv('test.csv')\n",
@@ -671,17 +679,27 @@
     "        \"spa\":df.iloc[:,10].values,\n",
     "        \"VRdeck\":df.iloc[:,11].values\n",
     "  }\n",
-    "  return dict\n",
     "\n",
-    "train_data=np.transpose(np.vstack(list(encoding(df_train).values())))\n",
-    "test_data=np.transpose(np.vstack(list(encoding(df_test).values())))\n",
-    "train_labels=df_train.iloc[:,13].values\n",
-    "test_labels=df_test.iloc[:,13].values\n"
+    "  data= np.transpose(np.array([group, group_id, home_planet[:,0],home_planet[:,1],home_planet[:,2],df.iloc[:,2].values,num,\n",
+    "                deck[:,0], deck[:,1], deck[:,2],deck[:,3],deck[:,4],deck[:,5],deck[:,6],deck[:,7],side[:,0],\n",
+    "                side[:,1],destination[:,0],destination[:,1],destination[:,2],df.iloc[:,5].values,df.iloc[:,6].values,\n",
+    "                df.iloc[:,7].values,df.iloc[:,8].values,df.iloc[:,9].values,df.iloc[:,10].values,df.iloc[:,11].values ]))\n",
+    "\n",
+    "  return data\n",
+    "\n",
+    "test_data=encoding(df_test)\n",
+    "test_labels=df_test.iloc[:,13]\n",
+    "\n",
+    "train_data=[]\n",
+    "x=encoding(df_train)\n",
+    "for i in range(len(x)):\n",
+    "  train_data.append([tuple(x[i]), (df_train.iloc[i,13],)])\n",
+    "print(train_data[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -759,11 +777,11 @@
      "evalue": "tuple index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 31\u001b[0m\n\u001b[1;32m     27\u001b[0m     arr \u001b[39m=\u001b[39m arr_new\n\u001b[1;32m     29\u001b[0m \u001b[39m# let's use our lovely function\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m get_rid_of_nan(x)\n\u001b[1;32m     32\u001b[0m get_rid_of_nan(y)\n\u001b[1;32m     34\u001b[0m \u001b[39m# and we transform our data into vector of observation, when each observation consists out of input (\"x\") and output(\"y\")\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn [9], line 13\u001b[0m, in \u001b[0;36mget_rid_of_nan\u001b[0;34m(arr, take_mean)\u001b[0m\n\u001b[1;32m     11\u001b[0m arr_new \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m     12\u001b[0m arr_new[arr_new \u001b[39m==\u001b[39m np\u001b[39m.\u001b[39mnan] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 13\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(np\u001b[39m.\u001b[39;49mshape(arr_new)[\u001b[39m1\u001b[39;49m]):\n\u001b[1;32m     14\u001b[0m     means\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmean(arr_new[:, i]))\n\u001b[1;32m     16\u001b[0m \u001b[39mfor\u001b[39;00m col \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(np\u001b[39m.\u001b[39mshape(arr)[\u001b[39m1\u001b[39m]):\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [11], line 31\u001b[0m\n\u001b[0;32m     27\u001b[0m     arr \u001b[39m=\u001b[39m arr_new\n\u001b[0;32m     29\u001b[0m \u001b[39m# let's use our lovely function\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m get_rid_of_nan(x)\n\u001b[0;32m     32\u001b[0m get_rid_of_nan(y)\n\u001b[0;32m     34\u001b[0m \u001b[39m# and we transform our data into vector of observation, when each observation consists out of input (\"x\") and output(\"y\")\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [11], line 13\u001b[0m, in \u001b[0;36mget_rid_of_nan\u001b[1;34m(arr, take_mean)\u001b[0m\n\u001b[0;32m     11\u001b[0m arr_new \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m     12\u001b[0m arr_new[arr_new \u001b[39m==\u001b[39m np\u001b[39m.\u001b[39mnan] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m---> 13\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(np\u001b[39m.\u001b[39;49mshape(arr_new)[\u001b[39m1\u001b[39;49m]):\n\u001b[0;32m     14\u001b[0m     means\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmean(arr_new[:, i]))\n\u001b[0;32m     16\u001b[0m \u001b[39mfor\u001b[39;00m col \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(np\u001b[39m.\u001b[39mshape(arr)[\u001b[39m1\u001b[39m]):\n",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
    ],
@@ -878,7 +896,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML_M1",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -892,12 +910,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ced241d5e25316607f69b17bccf9c4f21b200991effa1e275b2556613ad6a8df"
+    "hash": "444de99622c186727863be987e16d2f71f919ca048dbd0162ded63cc1c2ff888"
    }
   }
  },
