--- a/main.ipynb
+++ b/main.ipynb
@@ -707,7 +707,9 @@
     "for i in range(len(x)):\n",
     "  train_data.append([np.array(tuple(x[i])), (df_train.iloc[i,13])])\n",
     "print(train_data[0])\n",
-    "print(len(train_data))"
+    "print(len(train_data))\n",
+    "\n",
+    "#komentarz"
    ]
   },
   {
