added little helper

--- a/main.ipynb
+++ b/main.ipynb
@@ -849,23 +849,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'network' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train(network\u001b[39m=\u001b[39mnetwork, train_data\u001b[39m=\u001b[39mA_train_data, test_data\u001b[39m=\u001b[39mA_test_data, test\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, iter_num\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'network' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([0.0108], dtype=torch.float64, grad_fn=<ReluBackward0>)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)"
+    "model = Net(27, 100, 80, 100, 1)\n",
+    "x , y = train_data[0]\n",
+    "x_t = torch.from_numpy(x)\n",
+    "model(x_t)\n",
+    "#train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)"
    ]
   },
   {
