--- a/main.ipynb
+++ b/main.ipynb
@@ -868,7 +868,7 @@
     "x , y = train_data[0]\n",
     "x_t = torch.from_numpy(x)\n",
     "model(x_t)\n",
-    "#train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)"
+    "#train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)fd"
    ]
   },
   {
@@ -888,7 +888,7 @@
     }
    ],
    "source": [
-    "x_t.shape"
+    "x_t.shape\n"
    ]
   },
   {
