--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
       "[tensor([1.0000, 1.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000,\n",
       "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 1.0000,\n",
       "        0.0000, 0.0000, 0.4937, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "       dtype=torch.float64), tensor(0, dtype=torch.int32)]\n"
+      "       dtype=torch.float64), tensor(0)]\n"
      ]
     }
    ],
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,18 +846,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([0.0155], dtype=torch.float64, grad_fn=<ReluBackward0>)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "expected np.ndarray (got Tensor)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [47], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[39m=\u001b[39m Net(\u001b[39m27\u001b[39m, \u001b[39m100\u001b[39m, \u001b[39m80\u001b[39m, \u001b[39m100\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[1;32m      2\u001b[0m x , y \u001b[39m=\u001b[39m train_data[\u001b[39m0\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m x_t \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mfrom_numpy(x)\n\u001b[1;32m      4\u001b[0m model(x_t)\n",
+      "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got Tensor)"
+     ]
     }
    ],
    "source": [
@@ -870,49 +871,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=[]\n",
-    "y=[]\n",
-    "for row in train_data:\n",
-    "    x.append(row[0])\n",
-    "    y.append(row[1])\n",
-    "x_t=torch.tensor(x)\n",
-    "y_t=torch.tensor(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
-       "         0.0000e+00],\n",
-       "        [2.0000e+00, 1.0000e+00, 0.0000e+00,  ..., 2.0403e-03, 2.4500e-02,\n",
-       "         2.1637e-03],\n",
-       "        [3.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 2.9967e-01,\n",
-       "         2.4095e-03],\n",
-       "        ...,\n",
-       "        [9.2790e+03, 1.0000e+00, 0.0000e+00,  ..., 1.5278e-01, 4.4627e-05,\n",
-       "         0.0000e+00],\n",
-       "        [9.2800e+03, 1.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 1.5753e-02,\n",
-       "         1.5908e-01],\n",
-       "        [9.2800e+03, 2.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
-       "         5.9009e-04]], dtype=torch.float64)"
+       "tensor([0.0100], dtype=torch.float64, grad_fn=<ReluBackward0>)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_t"
+    "model(train_data[3][0])"
    ]
   },
   {
