--- a/main.ipynb
+++ b/main.ipynb
@@ -603,17 +603,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[tensor([1.0000, 1.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000,\n",
-      "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 1.0000,\n",
-      "        0.0000, 0.0000, 0.4937, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "       dtype=torch.float64), tensor(0, dtype=torch.int32)]\n"
+      "[tensor([1.8000e+01, 1.0000e+00, 0.0000e+00, 1.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+      "        4.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+      "        1.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 1.0000e+00, 1.0000e+00,\n",
+      "        0.0000e+00, 0.0000e+00, 2.4051e-01, 0.0000e+00, 0.0000e+00, 4.3251e-04,\n",
+      "        0.0000e+00, 1.7943e-01, 0.0000e+00], dtype=torch.float64), tensor(0, dtype=torch.int32)]\n"
      ]
     }
    ],
@@ -696,14 +697,17 @@
     "\n",
     "  return data\n",
     "\n",
-    "test_data=encoding(df_test)\n",
-    "test_labels=df_test.iloc[:,13]\n",
+    "test_data=[]\n",
+    "x=encoding(df_test)\n",
+    "for i in range(len(x)):\n",
+    "  test_data.append([torch.tensor(np.array(tuple(x[i]))), torch.tensor(df_test.iloc[i,13])])\n",
     "\n",
     "train_data=[]\n",
     "x=encoding(df_train)\n",
     "for i in range(len(x)):\n",
     "  train_data.append([torch.tensor(np.array(tuple(x[i]))), torch.tensor(df_train.iloc[i,13])])\n",
-    "print(train_data[0])\n",
+    "\n",
+    "print(test_data[1])\n",
     "#print(len(train_data))\n"
    ]
   },
@@ -870,49 +874,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=[]\n",
-    "y=[]\n",
-    "for row in train_data:\n",
-    "    x.append(row[0])\n",
-    "    y.append(row[1])\n",
-    "x_t=torch.tensor(x)\n",
-    "y_t=torch.tensor(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[1.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
-       "         0.0000e+00],\n",
-       "        [2.0000e+00, 1.0000e+00, 0.0000e+00,  ..., 2.0403e-03, 2.4500e-02,\n",
-       "         2.1637e-03],\n",
-       "        [3.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 2.9967e-01,\n",
-       "         2.4095e-03],\n",
-       "        ...,\n",
-       "        [9.2790e+03, 1.0000e+00, 0.0000e+00,  ..., 1.5278e-01, 4.4627e-05,\n",
-       "         0.0000e+00],\n",
-       "        [9.2800e+03, 1.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 1.5753e-02,\n",
-       "         1.5908e-01],\n",
-       "        [9.2800e+03, 2.0000e+00, 1.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
-       "         5.9009e-04]], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\numpy\\core\\fromnumeric.py:2009: FutureWarning: The input object of type 'Tensor' is an array-like implementing one of the corresponding protocols (`__array__`, `__array_interface__` or `__array_struct__`); but not a sequence (or 0-D). In the future, this object will be coerced as if it was first converted using `np.array(obj)`. To retain the old behaviour, you have to either modify the type 'Tensor', or assign to an empty array created with `np.empty(correct_shape, dtype=object)`.\n",
+      "  result = asarray(a).shape\n",
+      "c:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\numpy\\core\\fromnumeric.py:2009: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  result = asarray(a).shape\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch nr 0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])) is deprecated. Please ensure they have the same size.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train(model, train_data, test_data)\n",
+      "Cell \u001b[1;32mIn [12], line 31\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(network, train_data, test_data, test, iter_num)\u001b[0m\n\u001b[0;32m     29\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()           \u001b[39m# clear gradient of loss function\u001b[39;00m\n\u001b[0;32m     30\u001b[0m results \u001b[39m=\u001b[39m model(x)              \u001b[39m# calculate predictions\u001b[39;00m\n\u001b[1;32m---> 31\u001b[0m loss \u001b[39m=\u001b[39m criterion(results, y)    \u001b[39m# calculate loss\u001b[39;00m\n\u001b[0;32m     32\u001b[0m loss\u001b[39m.\u001b[39mbackward()                 \u001b[39m# calculate gradient\u001b[39;00m\n\u001b[0;32m     33\u001b[0m optimizer\u001b[39m.\u001b[39mstep()                \u001b[39m# update parameters\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\modules\\module.py:1190\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1186\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1187\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1188\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1189\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1190\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1191\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\modules\\loss.py:619\u001b[0m, in \u001b[0;36mBCELoss.forward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    618\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 619\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
+      "File \u001b[1;32mc:\\Users\\Lenovo\\anaconda3\\envs\\ML\\lib\\site-packages\\torch\\nn\\functional.py:3086\u001b[0m, in \u001b[0;36mbinary_cross_entropy\u001b[1;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[0;32m   3084\u001b[0m     reduction_enum \u001b[39m=\u001b[39m _Reduction\u001b[39m.\u001b[39mget_enum(reduction)\n\u001b[0;32m   3085\u001b[0m \u001b[39mif\u001b[39;00m target\u001b[39m.\u001b[39msize() \u001b[39m!=\u001b[39m \u001b[39minput\u001b[39m\u001b[39m.\u001b[39msize():\n\u001b[1;32m-> 3086\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   3087\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUsing a target size (\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m) that is different to the input size (\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m) is deprecated. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   3088\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mPlease ensure they have the same size.\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(target\u001b[39m.\u001b[39msize(), \u001b[39minput\u001b[39m\u001b[39m.\u001b[39msize())\n\u001b[0;32m   3089\u001b[0m     )\n\u001b[0;32m   3091\u001b[0m \u001b[39mif\u001b[39;00m weight \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   3092\u001b[0m     new_size \u001b[39m=\u001b[39m _infer_size(target\u001b[39m.\u001b[39msize(), weight\u001b[39m.\u001b[39msize())\n",
+      "\u001b[1;31mValueError\u001b[0m: Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])) is deprecated. Please ensure they have the same size."
+     ]
     }
    ],
    "source": [
-    "x_t"
+    "train(model, train_data, test_data)"
    ]
   },
   {
