--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4         True  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
       "[tensor([1.0000, 1.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000,\n",
       "        0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 1.0000,\n",
       "        0.0000, 0.0000, 0.4937, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "       dtype=torch.float64), tensor(0)]\n"
+      "       dtype=torch.float64), tensor([0])]\n"
      ]
     }
    ],
@@ -702,14 +702,14 @@
     "train_data=[]\n",
     "x=encoding(df_train)\n",
     "for i in range(len(x)):\n",
-    "  train_data.append([torch.tensor(np.array(tuple(x[i]))), torch.tensor(df_train.iloc[i,13])])\n",
+    "  train_data.append([torch.tensor(np.array(tuple(x[i]))), torch.tensor([df_train.iloc[i,13]])])\n",
     "print(train_data[0])\n",
     "#print(len(train_data))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,8 +793,8 @@
     "        \n",
     "        # defining our model\n",
     "\n",
-    "        input_dim = np.shape(train_data)[1]     # number of variables\n",
-    "        output_dim = 1                          # \"yes\" or \"no\"\n",
+    "        #input_dim = np.shape(train_data)[1]     # number of variables\n",
+    "        #output_dim = 1                          # \"yes\" or \"no\"\n",
     "        #model = network(input_dim, 100, 80, 100, output_dim)\n",
     "        model = network\n",
     "        # configuring the net\n",
@@ -813,15 +813,16 @@
     "                for x, y in train_data:\n",
     "                        optimizer.zero_grad()           # clear gradient of loss function\n",
     "                        results = model(x)              # calculate predictions\n",
+    "                        print(results.shape, y.shape)\n",
     "                        loss = criterion(results, y)    # calculate loss\n",
     "                        loss.backward()                 # calculate gradient\n",
     "                        optimizer.step()                # update parameters\n",
-    "                        \n",
+    "                '''        \n",
     "                if epoch % 5:\n",
     "                        correct_list.append(how_many_ok(model(test_data[0]), test_data[1]))\n",
-    "\n",
+    "                '''\n",
     "        # plot loss function on test data\n",
-    "        \n",
+    "        '''\n",
     "        if test:\n",
     "\n",
     "                wrong_list = [np.shape(test_data)[0] - c for c in correct_list]\n",
@@ -840,53 +841,64 @@
     "                plt.show()\n",
     "        \n",
     "        # and finally\n",
-    "\n",
+    "        '''\n",
     "        return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected np.ndarray (got Tensor)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [47], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[39m=\u001b[39m Net(\u001b[39m27\u001b[39m, \u001b[39m100\u001b[39m, \u001b[39m80\u001b[39m, \u001b[39m100\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[1;32m      2\u001b[0m x , y \u001b[39m=\u001b[39m train_data[\u001b[39m0\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m x_t \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mfrom_numpy(x)\n\u001b[1;32m      4\u001b[0m model(x_t)\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected np.ndarray (got Tensor)"
-     ]
-    }
-   ],
-   "source": [
-    "model = Net(27, 100, 80, 100, 1)\n",
-    "x , y = train_data[0]\n",
-    "x_t = torch.from_numpy(x)\n",
-    "model(x_t)\n",
-    "#train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)fd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0100], dtype=torch.float64, grad_fn=<ReluBackward0>)"
+       "tensor([0.0552], dtype=torch.float64, grad_fn=<ReluBackward0>)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model(train_data[3][0])"
+    "model = Net(27, 100, 80, 100, 1)\n",
+    "model(train_data[0][0])\n",
+    "#train(network=network, train_data=A_train_data, test_data=A_test_data, test=False, iter_num=2)fd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch nr 0\n",
+      "torch.Size([1]) torch.Size([1])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Found dtype Long but expected Double",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [82], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train(network\u001b[39m=\u001b[39;49mmodel, train_data \u001b[39m=\u001b[39;49m train_data, test_data\u001b[39m=\u001b[39;49mtrain_data, test \u001b[39m=\u001b[39;49m \u001b[39mFalse\u001b[39;49;00m, iter_num \u001b[39m=\u001b[39;49m \u001b[39m10\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn [80], line 32\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(network, train_data, test_data, test, iter_num)\u001b[0m\n\u001b[1;32m     30\u001b[0m results \u001b[39m=\u001b[39m model(x)              \u001b[39m# calculate predictions\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \u001b[39mprint\u001b[39m(results\u001b[39m.\u001b[39mshape, y\u001b[39m.\u001b[39mshape)\n\u001b[0;32m---> 32\u001b[0m loss \u001b[39m=\u001b[39m criterion(results, y)    \u001b[39m# calculate loss\u001b[39;00m\n\u001b[1;32m     33\u001b[0m loss\u001b[39m.\u001b[39mbackward()                 \u001b[39m# calculate gradient\u001b[39;00m\n\u001b[1;32m     34\u001b[0m optimizer\u001b[39m.\u001b[39mstep()                \u001b[39m# update parameters\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/ML_M1/lib/python3.9/site-packages/torch/nn/modules/module.py:1190\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1186\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1187\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1188\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1189\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1190\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1191\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/anaconda3/envs/ML_M1/lib/python3.9/site-packages/torch/nn/modules/loss.py:619\u001b[0m, in \u001b[0;36mBCELoss.forward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    618\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 619\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
+      "File \u001b[0;32m~/anaconda3/envs/ML_M1/lib/python3.9/site-packages/torch/nn/functional.py:3095\u001b[0m, in \u001b[0;36mbinary_cross_entropy\u001b[0;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   3092\u001b[0m     new_size \u001b[39m=\u001b[39m _infer_size(target\u001b[39m.\u001b[39msize(), weight\u001b[39m.\u001b[39msize())\n\u001b[1;32m   3093\u001b[0m     weight \u001b[39m=\u001b[39m weight\u001b[39m.\u001b[39mexpand(new_size)\n\u001b[0;32m-> 3095\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mbinary_cross_entropy(\u001b[39minput\u001b[39;49m, target, weight, reduction_enum)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Found dtype Long but expected Double"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train(network=model, train_data = train_data, test_data=train_data, test = False, iter_num = 10)"
    ]
   },
   {
